--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                     <p style="text-align: justify;"> 
                     Welcome to my little corner of the internet! I’m currently a Grade 12 Student at SOS
 Hermann Gmeiner School Gandaki studying computer science. This website serves as a
-professional portfolio and a reflection of my academic journey, personal growth, and
+professional portfolio and the reflection of my academic journey, personal growth, and
 future aspirations. This site is where I share my journey, showcase projects, and explore
 ideas that excite me from coding to music and many more. I am committed to
 continuous learning, building practical skills, and contributing meaningfully to every
