--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ Hermann Gmeiner School Gandaki studying computer science. This website serves as
 professional portfolio and the reflection of my academic journey, personal growth, and
 future aspirations. This site is where I share my journey, showcase projects, and explore
 ideas that excite me from coding to music and many more. I am committed to
-continuous learning, building practical skills, and contributing meaningfully to every
+learning continuously, building practical skills, and contributing meaningfully to every
 opportunity I take on.  
                     </p>
 
