--- a/project.html
+++ b/project.html
@@ -53,8 +53,8 @@
     <div class="project-card">
       <div class="project-title">Prof Dr Indra P Tiwari</div>
       <div class="project-description"> I have made Website for Prof Dr Indra Prasad Tiwari.</div>
-      <p> <a href"indratiwari.com.np"> View Project </a></p>
-      
+            <a class="project-link" href="indratiwari.com.np" target="_blank">View Project</a>
+
     </div>
 
 
