--- a/project.html
+++ b/project.html
@@ -50,44 +50,44 @@
 
 
              <div class="projects-container">
-    <div class="project-card">
-      <div class="project-title">Prof Dr Indra P Tiwari</div>
-      <div class="project-description"> I have made Website for Prof Dr Indra Prasad Tiwari.</div>
-            <a class="project-link" href="indratiwari.com.np" target="_blank">View Project</a>
-
-    </div>
-
-
-
-      <div class="project-card">
-      <div class="project-title">Forefront Development Solutions</div>
-      <div class="project-description"> I have made Website for Forefront Development Solutions.</div>
-      <a class="project-link" href="" target="_blank">View Project</a>
-    </div>
 
     <div class="project-card">
-      <div class="project-title">Prabhab Tiwari</div>
-      <div class="project-description"> I have made Website for myself.</div>
-      <a class="project-link" href="prabhab.com.np" target="_blank">View Project</a>
-    </div>
-
-  <div class="project-card">
-      <div class="project-title">Database</div>
-      <div class="project-description">
-        I have compiled a provincial profile database for Nepal.
-    </div>
-    </div>
-  
-
-<div class="project-card">
-      <div class="project-title">Diamond Model School </div>
-      <div class="project-description"> I have made sample website for Diamond Model School.</div>
+        <div class="project-title">Prof Dr Indra P Tiwari</div>
+        <div class="project-description">Here I have made a website for Prof Dr Indra Prasad Tiwari.</div>
+        <a class="project-link" href="https://indratiwari.com.np" target="_blank">View Project</a>
     </div>
 
 <div class="project-card">
       <div class="project-title">Retired Professor Union</div>
-      <div class="project-description">I am currently working on this project to make website for RTU.</div>
+      <div class="project-description">I have made website for Retired Professors Society.</div>
+       <a class="project-link" href="https://retiredprofessors.org.np/" target="_blank">View Project</a>
     </div>
+
+      <div class="project-card">
+      <div class="project-title">Forefront Development Solutions</div>
+      <div class="project-description"> Here i have made Website for Forefront Development Solutions.</div>
+     <a class="project-link" href="" target="_blank">View Project</a>
+    </div>
+
+    <div class="project-card">
+      <div class="project-title">Prabhab Tiwari</div>
+      <div class="project-description"> Here i have made Website for myself.</div>
+     <a class="project-link" href="prabhab.com.np" target="_blank">View Project</a>
+    </div>
+
+  <div class="project-card">
+      <div class="project-title">Data Analysis</div>
+      <div class="project-description"> I have made data analyisis of different topics like "Palika data","University in Nepal" and many more</div>
+  <a class="project-link" href="Municipality wise record.xlsx" target="_blank">View Project</a>
+  </div>
+  
+
+<div class="project-card">
+      <div class="project-title">Diamond Model School </div>
+      <div class="project-description">Here I have made sample website for Diamond Model School.</div>
+    </div>
+
+
 
   </div>
 
