--- a/project.html
+++ b/project.html
@@ -58,7 +58,7 @@
     </div>
 
 <div class="project-card">
-      <div class="project-title">Retired Professor Union</div>
+      <div class="project-title">Retired Professors Society</div>
       <div class="project-description">I have made website for Retired Professors Society.</div>
        <a class="project-link" href="https://retiredprofessors.org.np/" target="_blank">View Project</a>
     </div>
@@ -72,7 +72,7 @@
     <div class="project-card">
       <div class="project-title">Prabhab Tiwari</div>
       <div class="project-description"> Here i have made Website for myself.</div>
-     <a class="project-link" href="prabhab.com.np" target="_blank">View Project</a>
+           <a class="project-link" href="https://prabhab.com.np/" target="_blank">View Project</a>
     </div>
 
   <div class="project-card">
