--- a/project.html
+++ b/project.html
@@ -78,7 +78,7 @@
   <div class="project-card">
       <div class="project-title">Data Analysis</div>
       <div class="project-description"> I have made data analyisis of different topics like "Palika data","University in Nepal" and many more</div>
-  <a class="project-link" href="Municipality wise record.xlsx" target="_blank">View Project</a>
+  <a class="project-link" href="Municipality wise record.pdf" target="_blank">View Project</a>
   </div>
   
 
