--- a/about.html
+++ b/about.html
@@ -51,6 +51,11 @@ I enjoy exploring different areas of computer science, from web development and 
 design to cybersecurity and artificial intelligence. I&#39;m currently building my skills in
 languages like Python, JavaScript, and HTML/CSS, and I love taking on small projects
 that challenge my creativity and logic.
+          <br>
+          Beyond academics, I currently serve as the Chartered President of the Diamond Model School Alumni
+          Association and as the Editor of the Rotaract Club of Lekhnath. These leadership roles allow me to contribute 
+          to my community, strengthen networks, and grow as a communicator and organizer.
+          <br>
 Outside of coding, I enjoy gaming, reading tech blogs, and participating in school tech
 clubs and hackathons. My goal is to pursue a degree in Computer Science and eventually
 work as a software developer or tech entrepreneur.
@@ -90,3 +95,4 @@ Thanks for stopping by!
   </script>
 </body>
 </html>
+
