--- a/project.html
+++ b/project.html
@@ -50,6 +50,12 @@
 
 
              <div class="projects-container">
+               
+    <div class="project-card">
+        <div class="project-title">Rotaract Club of Lekhnath</div>
+        <div class="project-description">Made a website for Rotaract Club of Lekhnath.</div>
+        <a class="project-link" href="https://rotaractlekhnath.org.np/" target="_blank">View Project</a>
+    </div>
 
     <div class="project-card">
         <div class="project-title">Prof Dr Indra P Tiwari</div>
@@ -125,3 +131,4 @@
   </script>
 </body>
 </html>
+
