--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    
+    <link rel="icon" type="image/png" href="logo png.png">
 
     
 
@@ -66,7 +66,7 @@
                     <P></P>
                     <p style="text-align: justify;"> 
                     Welcome to my little corner of the internet! I’m currently a Grade 12 Student at SOS
-Hermann Gmeiner School Gandaki studying computer science. This website serves as a
+Hermann Gmeiner School Gandaki studying Computer Science. This website serves as a
 professional portfolio and the reflection of my academic journey, personal growth, and
 future aspirations. This site is where I share my journey, showcase projects, and explore
 ideas that excite me from coding to music and many more. I am committed to
@@ -127,6 +127,7 @@ opportunity I take on.
 
 </body>
 </html>
+
 
 
 
