--- a/about.html
+++ b/about.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>About my Life - Prabhab Tiwari</title>
+  <link rel="icon" type="image/png" href="logo png.png">
   <link rel="stylesheet" href="style.css" />
 
   <link rel="stylesheet" href="style.css" />
@@ -95,4 +96,5 @@ Thanks for stopping by!
   </script>
 </body>
 </html>
+
 
