--- a/project.html
+++ b/project.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Projects - Prabhab Tiwari</title>
+  <link rel="icon" type="image/png" href="logo png.png">
   <link rel="stylesheet" href="style.css" />
 
   <link rel="stylesheet" href="style.css" />
@@ -131,4 +132,5 @@
   </script>
 </body>
 </html>
+
 
