--- a/software.html
+++ b/software.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Softwares - Prabhab Tiwari</title>
+  <link rel="icon" type="image/png" href="logo png.png">  
   <link rel="stylesheet" href="style.css" />
 
   <link rel="stylesheet" href="style.css" />
@@ -124,3 +125,4 @@
   </script>
 </body>
 </html>
+
