--- a/diary.html
+++ b/diary.html
@@ -215,7 +215,7 @@
 
                     <div class="projects-container">
 
-                        <a href="15.pdf" target="_blank" title="View Diary Entry PDF">
+                        <a href="15 November 2025.pdf" target="_blank" title="View Diary Entry PDF">
                             <div class="project-card diary-entry">
                                 <div class="diary-date"><i class="fa-regular fa-calendar-check"></i> November 15, 2025
                                 </div>
@@ -342,3 +342,4 @@
 </body>
 
 </html>
+
