--- a/sp/countdown.html
+++ b/sp/countdown.html
@@ -461,35 +461,35 @@
             <div class="slider">
                 <div class="slide-track">
                     <div class="slide"><img
-                            src="sp/sp1.JPG"
+                            src="sp/sp1.jpg"
                             alt="Memory"></div>
                     <div class="slide"><img
-                            src="sp/sp2.JPG"
+                            src="sp/sp2.jpg"
                             alt="Memory"></div>
                     <div class="slide"><img
-                            src="sp/sp3.JPG"
+                            src="sp/sp3.jpg"
                             alt="Memory"></div>
                     <div class="slide"><img
-                            src="sp/sp4.JPG"
+                            src="sp/sp4.jpg"
                             alt="Memory"></div>
                     <div class="slide"><img
-                            src="sp/sp5.JPG"
+                            src="sp/sp5.jpg"
                             alt="Memory"></div>
 
                      <div class="slide"><img
-                            src="sp/sp1.JPG"
+                            src="sp/sp1.jpg"
                             alt="Memory"></div>
                     <div class="slide"><img
-                            src="sp/sp2.JPG"
+                            src="sp/sp2.jpg"
                             alt="Memory"></div>
                     <div class="slide"><img
-                            src="sp/sp3.JPG"
+                            src="sp/sp3.jpg"
                             alt="Memory"></div>
                     <div class="slide"><img
-                            src="sp/sp4.JPG"
+                            src="sp/sp4.jpg"
                             alt="Memory"></div>
                     <div class="slide"><img
-                            src="sp/sp5.JPG"
+                            src="sp/sp5.jpg"
                             alt="Memory"></div>
                 </div>
             </div>
