--- a/sp/countdown.html
+++ b/sp/countdown.html
@@ -304,7 +304,7 @@
         .slide img {
             width: 100%;
             height: 100%;
-            object-fit: cover;
+            object-fit: contain;
             border-radius: 15px;
             border: 4px solid white;
             box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
@@ -461,35 +461,35 @@
             <div class="slider">
                 <div class="slide-track">
                     <div class="slide"><img
-                            src="sp/sp1.jpg"
+                            src="sp1.jpg"
                             alt="Memory"></div>
                     <div class="slide"><img
-                            src="sp/sp2.jpg"
+                            src="sp2.jpg"
                             alt="Memory"></div>
                     <div class="slide"><img
-                            src="sp/sp3.jpg"
+                            src="sp3.jpg"
                             alt="Memory"></div>
                     <div class="slide"><img
-                            src="sp/sp4.jpg"
+                            src="sp4.jpg"
                             alt="Memory"></div>
                     <div class="slide"><img
-                            src="sp/sp5.jpg"
+                            src="sp5.jpg"
                             alt="Memory"></div>
 
                      <div class="slide"><img
-                            src="sp/sp1.jpg"
+                            src="sp1.jpg"
                             alt="Memory"></div>
                     <div class="slide"><img
-                            src="sp/sp2.jpg"
+                            src="sp2.jpg"
                             alt="Memory"></div>
                     <div class="slide"><img
-                            src="sp/sp3.jpg"
+                            src="sp3.jpg"
                             alt="Memory"></div>
                     <div class="slide"><img
-                            src="sp/sp4.jpg"
+                            src="sp4.jpg"
                             alt="Memory"></div>
                     <div class="slide"><img
-                            src="sp/sp5.jpg"
+                            src="sp5.jpg"
                             alt="Memory"></div>
                 </div>
             </div>
