--- a/sp/countdown.html
+++ b/sp/countdown.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Prabhab & Sandhu</title>
+    <title>Prabhab & Sandhya</title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Great+Vibes&family=Poppins:wght@300;500;700&display=swap');
 
@@ -426,7 +426,7 @@
 
     <div class="main-wrapper">
         <div class="card-glass">
-            <h1>Prabhab & Sandhu</h1>
+            <h1>Prabhab & Sandhya</h1>
             <p class="subtitle">Together For</p>
 
             <div class="timer-grid">
